@@ -101,13 +101,23 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the minWidth, prefWidth, maxWidth, minHeight, prefHeight, and maxHeight to the specified value. */
 	public Cell<T> size (float size) {
-		size(new Fixed(size));
+		if (minWidth instanceof Fixed && minHeight instanceof Fixed && prefWidth instanceof Fixed && prefHeight instanceof Fixed
+			&& maxWidth instanceof Fixed && maxHeight instanceof Fixed) {
+			((Fixed)minWidth).value = size;
+			((Fixed)minHeight).value = size;
+			((Fixed)prefWidth).value = size;
+			((Fixed)prefHeight).value = size;
+			((Fixed)maxWidth).value = size;
+			((Fixed)maxHeight).value = size;
+		} else
+			size(new Fixed(size));
 		return this;
 	}
 
 	/** Sets the minWidth, prefWidth, maxWidth, minHeight, prefHeight, and maxHeight to the specified values. */
 	public Cell<T> size (float width, float height) {
-		size(new Fixed(width), new Fixed(height));
+		width(width);
+		height(height);
 		return this;
 	}
 
@@ -122,7 +132,12 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the minWidth, prefWidth, and maxWidth to the specified value. */
 	public Cell<T> width (float width) {
-		width(new Fixed(width));
+		if (minWidth instanceof Fixed && prefWidth instanceof Fixed && maxWidth instanceof Fixed) {
+			((Fixed)minWidth).value = width;
+			((Fixed)prefWidth).value = width;
+			((Fixed)maxWidth).value = width;
+		} else
+			width(new Fixed(width));
 		return this;
 	}
 
@@ -137,7 +152,12 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the minHeight, prefHeight, and maxHeight to the specified value. */
 	public Cell<T> height (float height) {
-		height(new Fixed(height));
+		if (minHeight instanceof Fixed && prefHeight instanceof Fixed && maxHeight instanceof Fixed) {
+			((Fixed)minHeight).value = height;
+			((Fixed)prefHeight).value = height;
+			((Fixed)maxHeight).value = height;
+		} else
+			height(new Fixed(height));
 		return this;
 	}
 
@@ -172,23 +192,34 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the minWidth and minHeight to the specified value. */
 	public Cell<T> minSize (float size) {
-		minSize(new Fixed(size));
+		if (minWidth instanceof Fixed && minHeight instanceof Fixed) {
+			((Fixed)minWidth).value = size;
+			((Fixed)minHeight).value = size;
+		} else
+			minSize(new Fixed(size));
 		return this;
 	}
 
 	/** Sets the minWidth and minHeight to the specified values. */
 	public Cell<T> minSize (float width, float height) {
-		minSize(new Fixed(width), new Fixed(height));
+		minWidth(width);
+		minHeight(height);
 		return this;
 	}
 
 	public Cell<T> minWidth (float minWidth) {
-		this.minWidth = new Fixed(minWidth);
+		if (this.minWidth instanceof Fixed)
+			((Fixed)this.minWidth).value = minWidth;
+		else
+			this.minWidth = new Fixed(minWidth);
 		return this;
 	}
 
 	public Cell<T> minHeight (float minHeight) {
-		this.minHeight = new Fixed(minHeight);
+		if (this.minHeight instanceof Fixed)
+			((Fixed)this.minHeight).value = minHeight;
+		else
+			this.minHeight = new Fixed(minHeight);
 		return this;
 	}
 
@@ -223,23 +254,34 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the prefWidth and prefHeight to the specified value. */
 	public Cell<T> prefSize (float width, float height) {
-		prefSize(new Fixed(width), new Fixed(height));
+		prefWidth(width);
+		prefHeight(height);
 		return this;
 	}
 
 	/** Sets the prefWidth and prefHeight to the specified values. */
 	public Cell<T> prefSize (float size) {
-		prefSize(new Fixed(size));
+		if (prefWidth instanceof Fixed && prefHeight instanceof Fixed) {
+			((Fixed)prefWidth).value = size;
+			((Fixed)prefHeight).value = size;
+		} else
+			prefSize(new Fixed(size));
 		return this;
 	}
 
 	public Cell<T> prefWidth (float prefWidth) {
-		this.prefWidth = new Fixed(prefWidth);
+		if (this.prefWidth instanceof Fixed)
+			((Fixed)this.prefWidth).value = prefWidth;
+		else
+			this.prefWidth = new Fixed(prefWidth);
 		return this;
 	}
 
 	public Cell<T> prefHeight (float prefHeight) {
-		this.prefHeight = new Fixed(prefHeight);
+		if (this.prefHeight instanceof Fixed)
+			((Fixed)this.prefHeight).value = prefHeight;
+		else
+			this.prefHeight = new Fixed(prefHeight);
 		return this;
 	}
 
@@ -274,23 +316,34 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the maxWidth and maxHeight to the specified value. */
 	public Cell<T> maxSize (float size) {
-		maxSize(new Fixed(size));
+		if (maxWidth instanceof Fixed && maxHeight instanceof Fixed) {
+			((Fixed)maxWidth).value = size;
+			((Fixed)maxHeight).value = size;
+		} else
+			maxSize(new Fixed(size));
 		return this;
 	}
 
 	/** Sets the maxWidth and maxHeight to the specified values. */
 	public Cell<T> maxSize (float width, float height) {
-		maxSize(new Fixed(width), new Fixed(height));
+		maxWidth(width);
+		maxHeight(height);
 		return this;
 	}
 
 	public Cell<T> maxWidth (float maxWidth) {
-		this.maxWidth = new Fixed(maxWidth);
+		if (this.maxWidth instanceof Fixed)
+			((Fixed)this.maxWidth).value = maxWidth;
+		else
+			this.maxWidth = new Fixed(maxWidth);
 		return this;
 	}
 
 	public Cell<T> maxHeight (float maxHeight) {
-		this.maxHeight = new Fixed(maxHeight);
+		if (this.maxHeight instanceof Fixed)
+			((Fixed)this.maxHeight).value = maxHeight;
+		else
+			this.maxHeight = new Fixed(maxHeight);
 		return this;
 	}
 
@@ -343,40 +396,58 @@ public class Cell<T extends Actor> implements Poolable {
 	/** Sets the spaceTop, spaceLeft, spaceBottom, and spaceRight to the specified value. */
 	public Cell<T> space (float space) {
 		if (space < 0) throw new IllegalArgumentException("space cannot be < 0.");
-		space(new Fixed(space));
+		if (spaceTop instanceof Fixed && spaceLeft instanceof Fixed && spaceBottom instanceof Fixed
+			&& spaceRight instanceof Fixed) {
+			((Fixed)spaceTop).value = space;
+			((Fixed)spaceLeft).value = space;
+			((Fixed)spaceBottom).value = space;
+			((Fixed)spaceRight).value = space;
+		} else
+			space(new Fixed(space));
 		return this;
 	}
 
 	public Cell<T> space (float top, float left, float bottom, float right) {
-		if (top < 0) throw new IllegalArgumentException("top cannot be < 0.");
-		if (left < 0) throw new IllegalArgumentException("left cannot be < 0.");
-		if (bottom < 0) throw new IllegalArgumentException("bottom cannot be < 0.");
-		if (right < 0) throw new IllegalArgumentException("right cannot be < 0.");
-		space(new Fixed(top), new Fixed(left), new Fixed(bottom), new Fixed(right));
+		spaceTop(top);
+		spaceLeft(top);
+		spaceBottom(top);
+		spaceRight(top);
 		return this;
 	}
 
 	public Cell<T> spaceTop (float spaceTop) {
 		if (spaceTop < 0) throw new IllegalArgumentException("spaceTop cannot be < 0.");
-		this.spaceTop = new Fixed(spaceTop);
+		if (this.spaceTop instanceof Fixed)
+			((Fixed)this.spaceTop).value = spaceTop;
+		else
+			this.spaceTop = new Fixed(spaceTop);
 		return this;
 	}
 
 	public Cell<T> spaceLeft (float spaceLeft) {
 		if (spaceLeft < 0) throw new IllegalArgumentException("spaceLeft cannot be < 0.");
-		this.spaceLeft = new Fixed(spaceLeft);
+		if (this.spaceLeft instanceof Fixed)
+			((Fixed)this.spaceLeft).value = spaceLeft;
+		else
+			this.spaceLeft = new Fixed(spaceLeft);
 		return this;
 	}
 
 	public Cell<T> spaceBottom (float spaceBottom) {
 		if (spaceBottom < 0) throw new IllegalArgumentException("spaceBottom cannot be < 0.");
-		this.spaceBottom = new Fixed(spaceBottom);
+		if (this.spaceBottom instanceof Fixed)
+			((Fixed)this.spaceBottom).value = spaceBottom;
+		else
+			this.spaceBottom = new Fixed(spaceBottom);
 		return this;
 	}
 
 	public Cell<T> spaceRight (float spaceRight) {
 		if (spaceRight < 0) throw new IllegalArgumentException("spaceRight cannot be < 0.");
-		this.spaceRight = new Fixed(spaceRight);
+		if (this.spaceRight instanceof Fixed)
+			((Fixed)this.spaceRight).value = spaceRight;
+		else
+			this.spaceRight = new Fixed(spaceRight);
 		return this;
 	}
 
@@ -428,32 +499,53 @@ public class Cell<T extends Actor> implements Poolable {
 
 	/** Sets the padTop, padLeft, padBottom, and padRight to the specified value. */
 	public Cell<T> pad (float pad) {
-		pad(new Fixed(pad));
+		if (padTop instanceof Fixed && padLeft instanceof Fixed && padBottom instanceof Fixed && padRight instanceof Fixed) {
+			((Fixed)padTop).value = pad;
+			((Fixed)padLeft).value = pad;
+			((Fixed)padBottom).value = pad;
+			((Fixed)padRight).value = pad;
+		} else
+			pad(new Fixed(pad));
 		return this;
 	}
 
 	public Cell<T> pad (float top, float left, float bottom, float right) {
-		pad(new Fixed(top), new Fixed(left), new Fixed(bottom), new Fixed(right));
+		padTop(top);
+		padLeft(left);
+		padBottom(bottom);
+		padRight(right);
 		return this;
 	}
 
 	public Cell<T> padTop (float padTop) {
-		this.padTop = new Fixed(padTop);
+		if (this.padTop instanceof Fixed)
+			((Fixed)this.padTop).value = padTop;
+		else
+			this.padTop = new Fixed(padTop);
 		return this;
 	}
 
 	public Cell<T> padLeft (float padLeft) {
-		this.padLeft = new Fixed(padLeft);
+		if (this.padLeft instanceof Fixed)
+			((Fixed)this.padLeft).value = padLeft;
+		else
+			this.padLeft = new Fixed(padLeft);
 		return this;
 	}
 
 	public Cell<T> padBottom (float padBottom) {
-		this.padBottom = new Fixed(padBottom);
+		if (this.padBottom instanceof Fixed)
+			((Fixed)this.padBottom).value = padBottom;
+		else
+			this.padBottom = new Fixed(padBottom);
 		return this;
 	}
 
 	public Cell<T> padRight (float padRight) {
-		this.padRight = new Fixed(padRight);
+		if (this.padRight instanceof Fixed)
+			((Fixed)this.padRight).value = padRight;
+		else
+			this.padRight = new Fixed(padRight);
 		return this;
 	}
 
